--- a/WebServices.ipynb
+++ b/WebServices.ipynb
@@ -193,6 +193,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.digitalocean.com/community/tutorials/how-to-use-web-apis-in-python-3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On YouTube Rest API Example Home Automation\n",
+    "https://www.youtube.com/watch?v=4T5Gnrmzjak"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
