--- a/DanAtRealPython.ipynb
+++ b/DanAtRealPython.ipynb
@@ -660,6 +660,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Whitespace and Python\n",
+    "https://mail.google.com/mail/u/0/#inbox/FMfcgxwBWKdTsRZhvGttnMzsRqdcgXGZ\n",
+    "\n",
+    "Python Dependencies https://mail.google.com/mail/u/0/#search/dan+at+real+python/FMfcgxwBWKdSmrTnDhrRrgHxvrPZLlSG"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
