--- a/DanAtRealPython.ipynb
+++ b/DanAtRealPython.ipynb
@@ -4,6 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dan's Tips\n",
+    "Whitespace and Python\n",
+    "https://mail.google.com/mail/u/0/#inbox/FMfcgxwBWKdTsRZhvGttnMzsRqdcgXGZ\n",
+    "\n",
+    "Python Dependencies https://mail.google.com/mail/u/0/#search/dan+at+real+python/FMfcgxwBWKdSmrTnDhrRrgHxvrPZLlSG\n",
+    "\n",
+    "Python Dependencie pitfalls\n",
+    "https://mail.google.com/mail/u/0/#label/%40study/FMfcgxwBWKdTsRZhwMfNTZtdCrCxJZtC\n",
+    "\n",
+    "PythonistaCafe a Great Idea\n",
+    "https://mail.google.com/mail/u/0/#label/%40study/FMfcgxwBWKdTsRZhwNPcqwmTKRstxvbX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'004'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Examples related to above tips\n",
+    "\n",
+    "# A 'Tiny Library'\n",
+    "n = '4'\n",
+    "n.zfill(3)\n",
+    "#'004'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# PyTricks"
    ]
   },
@@ -657,16 +699,6 @@
     "                  number=10000)\n",
     "\n",
     "# 0.3412662749997253\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Whitespace and Python\n",
-    "https://mail.google.com/mail/u/0/#inbox/FMfcgxwBWKdTsRZhvGttnMzsRqdcgXGZ\n",
-    "\n",
-    "Python Dependencies https://mail.google.com/mail/u/0/#search/dan+at+real+python/FMfcgxwBWKdSmrTnDhrRrgHxvrPZLlSG"
    ]
   },
   {
